lib/libui/chatwidget/snapshots/libui__chatwidget__tests__preamble_keeps_working_status.snap
---
source: lib/libui/chatwidget/tests.rs
assertion_line: 3765
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask FreeChaOS to do anything                                                  "
"                                                                                "
"  ? for shortcuts · Default                                  100% context left  "
