lib/libui/chatwidget/snapshots/libui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: lib/libui/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---

