lib/libui/chatwidget/snapshots/libui__chatwidget__tests__slash_copy_no_output_info_message.snap
---
source: lib/libui/chatwidget/tests.rs
expression: rendered
---
• `/copy` is unavailable before the first FreeChaOS output or right after a rollback.
