lib/libui/chatwidget/snapshots/libui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: lib/libui/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to interrupt) · 1 background terminal running · /ps to view…"
"                                                                                "
"                                                                                "
"› Ask FreeChaOS to do anything                                                  "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
