lib/libui/chatwidget/snapshots/libui__chatwidget__tests__unified_exec_non_empty_then_empty_active.snap
---
source: lib/libui/chatwidget/tests.rs
expression: active_combined
---
↳ Interacted with background terminal · just fix
  └ pwd
