lib/libui/chatwidget/snapshots/libui__chatwidget__tests__unified_exec_wait_after_final_agent_message.snap
---
source: lib/libui/chatwidget/tests.rs
expression: combined
---
• Waited for background terminal · cargo test -p chaos-kern

• Final response.
