lib/libui/chatwidget/snapshots/libui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: lib/libui/chatwidget/tests.rs
expression: rendered
---
• Waiting for background terminal (0s • esc to …
  └ cargo test -p chaos-kern -- --exact…


› Ask FreeChaOS to do anything

  ? for shortcuts            100% context left
